added theme colors of orange and blue etc

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="container mt-5">
     <div class="d-flex justify-content-end mb-3">
-        <button class="btn btn-primary me-2">Profile</button>
-        <button class="btn btn-primary">My Likes</button>
+        <button class="btn me-2" style="background-color: #575761; color: white;">Profile</button>
+        <button class="btn" style="background-color: #575761; color: white;">My Likes</button>
     </div>
 
 <!--    OPTION 1-->
@@ -39,14 +39,14 @@
             <div class="card__side card__side--back">
                 <div class="card__cover">
                     <h4 class="card__heading">
-                        <span class="card__heading-span">The Joke</span>
+                        <span class="card__heading-span" style="color: #F9B872;">The Joke</span>
                     </h4>
                 </div>
-                <div class="card__details">
-                    <ul>
-                        <li>Its a funny one</li>
-                    </ul>
-                </div>
+<!--                <div class="card__details">-->
+<!--                    <ul>-->
+<!--                        <li>Its a funny one</li>-->
+<!--                    </ul>-->
+<!--                </div>-->
             </div>
 
             <div class="card__side card__side--front">
@@ -59,9 +59,10 @@
             </div>
 
         </div>
-                <button class="btn btn-primary mt-3">Generate New</button>
+                <button class="btn mt-3" style="background-color: #575761; color: white;">Generate New</button>
         </div>
     </div>
+
 </div>
 
 </body>
