--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -75,7 +75,7 @@ html {
 
 body {
     height: 100vh;
-    background-color: #ece0e8;
+    background-color: #B6E1E7;
 }
 
 .artboard {
@@ -119,10 +119,11 @@ body {
     box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.15);
 }
 .card__side--front {
-    background-image: linear-gradient(to right bottom, rgba(30, 11, 54, 0.65), rgba(202, 55, 130, 0.7)), url(https://cdn.spacetelescope.org/archives/images/screen/heic0406a.jpg);
+    background-color: #F9B872;
+    /*background-image: linear-gradient(to right bottom, rgba(30, 11, 54, 0.65), rgba(202, 55, 130, 0.7)), url(https://cdn.spacetelescope.org/archives/images/screen/heic0406a.jpg);*/
 }
 .card__side--back {
-    background-color: #fff;
+    background-color: #FAE7A5;
     transform: rotateY(180deg);
 }
 .card:hover .card__side--back {
@@ -157,16 +158,17 @@ body {
     font-size: 6rem;
     font-weight: 100;
 }
-.card__cover {
-    position: relative;
-    background-size: cover;
-    height: 14rem;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    background-image: linear-gradient(to top right, rgba(30, 11, 54, 0.65), rgba(202, 55, 130, 0.65)), url(https://cdn.spacetelescope.org/archives/images/screen/heic0406a.jpg);
-}
+/*.card__cover {*/
+/*    position: relative;*/
+/*    background-size: cover;*/
+/*    height: 14rem;*/
+/*    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);*/
+/*    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);*/
+/*    border-top-left-radius: 3px;*/
+/*    border-top-right-radius: 3px;*/
+/*    background-color: #B6E1E7;*/
+/*    !*background-image: linear-gradient(to top right, rgba(30, 11, 54, 0.65), rgba(202, 55, 130, 0.65)), url(https://cdn.spacetelescope.org/archives/images/screen/heic0406a.jpg);*!*/
+/*}*/
 .card__heading {
     text-align: center;
     color: #fff;
