--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Thymeleaf Example</title>
+    <title>Jokes</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container mt-5">
-    <div class="d-flex justify-content-end mb-3">
-        <button class="btn me-2" style="background-color: #575761; color: white;">Profile</button>
-        <button class="btn" style="background-color: #575761; color: white;">My Likes</button>
+<div class="container">
+<!--  TODO: move to fragments folder - https://www.baeldung.com/spring-thymeleaf-fragments -->
+    <div th:fragment="header" class="d-flex mb-3 p-5">
+        <a class="btn me-auto p-2" href="/" style="background-color: #575761; color: white;">Home</a>
+        <a class="btn p-2 me-3" href="/user" style="background-color: #575761; color: white;">Profile</a>
+        <a class="btn p-2" href="/favourite" style="background-color: #575761; color: white;">My Likes</a>
     </div>
 
 <!--    OPTION 1-->
@@ -35,7 +37,6 @@
         <div class="d-flex flex-column align-items-center justify-content-center align-self-center">
 
         <div class="card">
-
             <div class="card__side card__side--back">
                 <div class="card__cover">
                     <h4 class="card__heading">
