--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <header th:insert="./index.html :: header"> </header>
+        <header th:insert="fragments/header.html :: header"> </header>
         <h1>User Profile</h1>
     </div>
 </body>
