--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
+<script>
+    (function () {
+        document.addEventListener("DOMContentLoaded", () => {
+            //playBtn clicked
+            document.getElementById("generate").addEventListener("click", (event) => {
+                fetch('/getJokes')
+                .then((data)=>{
+                    console.log(data);
+                })
+                .catch((e)=>{
+                    console.log(e)
+                })
+            });
+        });
+    })();
+</script>
 <body>
     <div class="container">
         <header th:insert="fragments/header.html :: header"> </header>
@@ -33,7 +48,7 @@
         <div class="artboard">
             <div class="d-flex flex-column align-items-center justify-content-center align-self-center">
                 <div th:insert="fragments/card.html :: card"></div>
-                <button class="btn mt-3" style="background-color: #575761; color: white;">Generate New</button>
+                <button id="generate" class="btn mt-3" style="background-color: #575761; color: white;">Generate New</button>
             </div>
         </div>
 
