--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
 
 <!--<html lang="en">-->
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div th:fragment="card" class="card">
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<div th:fragment="card" class="card card-container">
   <!--/*@thymesVar id="type" type=""*/-->
   <div class="card__side card__side--back" >
     <div class="card__cover">
@@ -38,5 +38,5 @@
   </div>
 
 </div>
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
