--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Jokes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,5 +23,6 @@
             <div th:insert="fragments/card.html :: card"></div>
         </div>
     </div>
+    <div th:insert="fragments/menu.html :: menu"> </div>
 </body>
 </html>
