--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Jokes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,5 +12,6 @@
         <header th:insert="fragments/header.html :: header"> </header>
         <h1>User Profile</h1>
     </div>
+    <div th:insert="fragments/menu.html :: menu"> </div>
 </body>
 </html>
