--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -14,7 +14,7 @@
       <h4 class="card__heading">
         <!--/*@thymesVar id="joke" type=""*/-->
         <!--/*@thymesVar id="delivery" type=""*/-->
-        <span th:text="${delivery}"></span>
+        <span class="card__heading-span" style="color: #F9B872; " th:text="${delivery}"></span>
 <!--        <span class="card__heading-span" style="color: #F9B872; " th:text="${joke != null ? 'The Joke' : delivery}"></span>-->
       </h4>
     </div>
@@ -32,7 +32,7 @@
 <!--        /*@thymesVar id="joke" type=""*/-->
 <!--        <p th:text="${joke}" class="card__title"></p>-->
         <!--/*@thymesVar id="setup" type=""*/-->
-        <p th:text="${type == 'twopart' ? setup : joke}" ></p>
+        <p  class="card__subject" th:text="${type == 'twopart' ? setup : joke}" ></p>
       </div>
     </div>
   </div>
