--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -14,13 +14,13 @@
 
         <!-- cards : -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
-            <div th:insert="fragments/card.html :: card"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div th:insert="fragments/card2.html :: card2" class="col"></div>
         </div>
     </div>
     <div th:insert="fragments/menu.html :: menu"> </div>
