--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,13 +6,14 @@
 </head>
 <body>
     <!--  NOGA: https://www.baeldung.com/spring-thymeleaf-fragments -->
-    <div th:fragment="header" class="d-flex mb-3 p-5">
-        <a class="btn me-3 p-2" href="/" style="background-color: #575761; color: white;">Home</a>
-        <button class="btn me-auto p-2 " style="background-color: #575761; color: white;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-            Menu
+    <div th:fragment="header" class="d-flex mb-3 p-2">
+        <button class="btn btn-outline-secondary me-3 p-2 px-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+            &#9776;
         </button>
-        <a class="btn p-2 me-3" href="/user" style="background-color: #575761; color: white;">Profile</a>
-        <a class="btn p-2" href="/favourite" style="background-color: #575761; color: white;">My Likes</a>
+<!--        style="background-color: #575761; color: white;"-->
+        <a class="btn btn-secondary me-auto p-2" href="/" >Home</a>
+        <a class="btn btn-secondary p-2 me-3" href="/user" >Profile</a>
+        <a class="btn btn-secondary p-2" href="/favourite" >My Likes</a>
     </div>
 </body>
 </html>
